--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -176,6 +176,21 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       android:visibility="invisible"
       android:text="" />
 
+
+    <ImageView
+        android:id="@+id/MyImageDisplay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/light_teal"
+
+        android:gravity="center"
+        android:textColor="?attr/textWhite"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:visibility="visible"
+        android:foregroundTint="@color/light_teal"
+        android:text="" />
+
   </RelativeLayout>
 
   <WebView
